@@ -1394,6 +1394,17 @@ This spell allows the caster to make creatures and items invisible.  Lasts \
 slightly longer than Improved Invisibility, and Invisibility, and does not \
 dispel during combat.  Use the VISIBLE command to revoke this spell from yourself.
 
+SPELL_GREATER_LEVITATE=SPELL_GREATERLEVITATE
+SPELL_GREATERLEVITATE=<ABILITY>\
+Usage    : CAST "GREATER LEVITATE" [TARGET NAME] ([POWER])\n\r\
+Example  : cast levitate evilmage\n\r\
+Example  : cast levitate wood 4\n\r\
+This spell causes a target item or mob to levitate straight up. \
+If a power number is specified, the object will attempt to levitate that \
+many rooms up before hovering.  Without a power number, the object will keep \
+levitating upward indefinitely, unless the object levitates from an underwater \
+room to a water surface room, in which case the object will begin to hover.
+
 SPELL_GROUPSTATUS=SPELL_GROUP_STATUS
 SPELL_GROUP_STATUS=<ABILITY>\
 Usage    : CAST "GROUP STATUS"\n\r\
