@@ -36,6 +36,7 @@
  44. Clans can now make GenClanCastles using ClanCrafting.
  45. AREAVISIT achievement type now supports CONFLICT argument.
  46. Refusing to create a new character no longer counts against login attempts.
+ 47. New spells: Greater Levitate
  
  # Build 5.9.11.1 Release 02/26/2021
   Bug Fix Release:
